[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/Sprites/Arrow.png" type="Texture" id=2]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_top = 13.0
margin_right = 40.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_top = 26.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 1.0
margin_top = 40.0
margin_right = 41.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow1" type="Sprite" parent="."]
position = Vector2( 460, 227 )
texture = ExtResource( 2 )

[node name="Arrow2" type="Sprite" parent="."]
position = Vector2( 521, 229 )
texture = ExtResource( 2 )

[node name="Arrow3" type="Sprite" parent="."]
position = Vector2( 589, 229 )
texture = ExtResource( 2 )

[node name="WinTime" type="Label" parent="."]
margin_left = 969.0
margin_top = 10.0
margin_right = 1009.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}
